// Vitest Snapshot v1

exports[`format > it formats cases/gjs/component-class.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  <template>
    <h1>
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>
}
"
`;

exports[`format > it formats cases/gjs/component-class-with-template-literal.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  <template>
    <h1>
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>

  what = \`template literal that is not a template\`;
}
"
`;

exports[`format > it formats cases/gjs/default-export.gjs 1`] = `
"export default <template>
  Explicit default export module top level component. Explicit default export
  module top level component. Explicit default export module top level
  component. Explicit default export module top level component. Explicit
  default export module top level component.
</template>
"
`;

exports[`format > it formats cases/gjs/exported-mod-var.gjs 1`] = `
"export const Exported = <template>
  Exported variable template. Exported variable template. Exported variable
  template. Exported variable template. Exported variable template. Exported
  variable template. Exported variable template.
</template>
"
`;

exports[`format > it formats cases/gjs/js-only.gjs 1`] = `
"const num = 1;
"
`;

exports[`format > it formats cases/gjs/multiple-declarations-no-semi.gjs 1`] = `
"const bool = false,
  ModVar3 = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar4 = <template>Second module variable template.</template>
"
`;

exports[`format > it formats cases/gjs/multiple-declarations-with-semi.gjs 1`] = `
"const ModVar1 = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar2 = <template>Second module variable template.</template>,
  num = 1;
"
`;

exports[`format > it formats cases/gjs/one-line.gjs 1`] = `
"const Oneline = <template>Module variable template (one line).</template>
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/component-class.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  // prettier-ignore
  <template>


    <h1>   Class top level template. Class top level template. Class top level template. Class top level template. Class top level template. </h1>
  </template>
}
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/component-class-with-template-literal.gjs 1`] = `
"import Component from \\"@glimmer/component\\";

/** It's a component */
class MyComponent extends Component {
  // prettier-ignore
  <template>


    <h1>   Class top level template. Class top level template. Class top level template. Class top level template. Class top level template. </h1>
  </template>

  what = \`template literal that is not a template\`;
}
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/default-export.gjs 1`] = `
"// prettier-ignore
export default <template>     Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. </template>
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/exported-mod-var.gjs 1`] = `
"// prettier-ignore
export const Exported =
  <template>       Exported variable template. Exported variable template.  Exported variable template.  Exported variable template.  Exported variable template. Exported variable template. Exported variable template. </template>
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/js-only.gjs 1`] = `
"// prettier-ignore
const num = 1;
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/multiple-declarations-no-semi.gjs 1`] = `
"// prettier-ignore
const bool = false,
  ModVar3 =
    <template>

  <h1>   Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template.   </h1>
</template>,
  ModVar4 = <template>
  Second module variable template.
</template>
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/multiple-declarations-with-semi.gjs 1`] = `
"// prettier-ignore
const ModVar1 =
    <template>

  <h1>   Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template.   </h1>
</template>,
  ModVar2 = <template>
  Second module variable template.
</template>,
  num = 1;
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/one-line.gjs 1`] = `
"// prettier-ignore
const Oneline = <template>      Module variable template (one line). </template>
"
`;

exports[`format > it formats cases/gjs/prettier-ignore/simple.gjs 1`] = `
"// prettier-ignore
<template>
              what
            </template>
"
`;

exports[`format > it formats cases/gjs/simple.gjs 1`] = `
"<template>what</template>
"
`;

exports[`format > it formats cases/gts/component-class.gts 1`] = `
"import Component from \\"@glimmer/component\\";

export interface Signature {
  Element: HTMLElement;
  Args: {
    myArg: string;
  };
  Yields: [];
}

/** It's a component */
class MyComponent extends Component<Signature> {
  <template>
    <h1>
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>
}
"
`;

exports[`format > it formats cases/gts/component-class-with-template-literal.gts 1`] = `
"import Component from \\"@glimmer/component\\";

export interface Signature {
  Element: HTMLElement;
  Args: {
    myArg: string;
  };
  Yields: [];
}

/** It's a component */
class MyComponent extends Component<Signature> {
  <template>
    <h1 ...attributes>
      {{@myArg}}
      Class top level template. Class top level template. Class top level
      template. Class top level template. Class top level template.
    </h1>
  </template>

  what = \`template literal that is not a template\`;
}
"
`;

exports[`format > it formats cases/gts/default-export.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

export default <template>
  Explicit default export module top level component. Explicit default export
  module top level component. Explicit default export module top level
  component. Explicit default export module top level component. Explicit
  default export module top level component.
</template> as TemplateOnlyComponent<Signature>
"
`;

exports[`format > it formats cases/gts/exported-mod-var.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

export const Exported = <template>
  Exported variable template. Exported variable template. Exported variable
  template. Exported variable template. Exported variable template. Exported
  variable template. Exported variable template.
</template> as TemplateOnlyComponent<Signature>
"
`;

exports[`format > it formats cases/gts/js-only.gts 1`] = `
"const num: number = 1;
"
`;

exports[`format > it formats cases/gts/multiple-declarations-no-semi.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

const bool: boolean = false,
  ModVar3: TemplateOnlyComponent<Signature> = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar4: TemplateOnlyComponent<Signature> = <template>
    Second module variable template.
  </template>
"
`;

exports[`format > it formats cases/gts/multiple-declarations-with-semi.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

const ModVar1: TemplateOnlyComponent<Signature> = <template>
    <h1>
      Module variable template. Module variable template. Module variable
      template. Module variable template. Module variable template. Module
      variable template. Module variable template. Module variable template.
    </h1>
  </template>,
  ModVar2: TemplateOnlyComponent<Signature> = <template>
    Second module variable template.
  </template>,
  num = 1;
"
`;

exports[`format > it formats cases/gts/one-line.gts 1`] = `
"import type { TOC } from \\"@ember/component/template-only\\";

export interface Sig {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

const Oneline = <template>
  Module variable template (one line).
</template> as TOC<Sig>
"
`;

exports[`format > it formats cases/gts/prettier-ignore/component-class.gts 1`] = `
"import Component from \\"@glimmer/component\\";

export interface Signature {
  Element: HTMLElement;
  Args: {
    myArg: string;
  };
  Yields: [];
}

/** It's a component */
class MyComponent extends Component<Signature> {
  // prettier-ignore
  <template>


    <h1>   Class top level template. Class top level template. Class top level template. Class top level template. Class top level template. </h1>
  </template>
}
"
`;

exports[`format > it formats cases/gts/prettier-ignore/component-class-with-template-literal.gts 1`] = `
"import Component from \\"@glimmer/component\\";

export interface Signature {
  Element: HTMLElement;
  Args: {
    myArg: string;
  };
  Yields: [];
}

/** It's a component */
class MyComponent extends Component<Signature> {
  // prettier-ignore
  <template>


    <h1 ...attributes>   {{@myArg}} Class top level template. Class top level template. Class top level template. Class top level template. Class top level template. </h1>
  </template>

  what = \`template literal that is not a template\`;
}
"
`;

exports[`format > it formats cases/gts/prettier-ignore/default-export.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}
// prettier-ignore
export default <template>     Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. Explicit default export module top level component. </template> as TemplateOnlyComponent<Signature>
"
`;

exports[`format > it formats cases/gts/prettier-ignore/exported-mod-var.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

// prettier-ignore
export const Exported =
  <template>       Exported variable template. Exported variable template.  Exported variable template.  Exported variable template.  Exported variable template. Exported variable template. Exported variable template. </template> as TemplateOnlyComponent<Signature>
"
`;

exports[`format > it formats cases/gts/prettier-ignore/js-only.gts 1`] = `
"// prettier-ignore
const num:   number = 1;
"
`;

exports[`format > it formats cases/gts/prettier-ignore/multiple-declarations-no-semi.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

// prettier-ignore
const bool: boolean = false,
  ModVar3: TemplateOnlyComponent<Signature> =
    <template>

  <h1>   Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template.   </h1>
</template>,
  ModVar4: TemplateOnlyComponent<Signature> =
    <template>
  Second module variable template.
</template>
"
`;

exports[`format > it formats cases/gts/prettier-ignore/multiple-declarations-with-semi.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

// prettier-ignore
const ModVar1: TemplateOnlyComponent<Signature> =
    <template>

  <h1>   Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template. Module variable template.   </h1>
</template>,
  ModVar2: TemplateOnlyComponent<Signature> =
    <template>
  Second module variable template.
</template>,
  num = 1;
"
`;

exports[`format > it formats cases/gts/prettier-ignore/one-line.gts 1`] = `
"import type { TOC } from \\"@ember/component/template-only\\";

export interface Sig {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

// prettier-ignore
const Oneline =
  <template>      Module variable template (one line). </template> as TOC<Sig>
"
`;

exports[`format > it formats cases/gts/prettier-ignore/simple.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

// prettier-ignore
<template>
              what
            </template> as TemplateOnlyComponent<Signature>
"
`;

exports[`format > it formats cases/gts/simple.gts 1`] = `
"import type { TemplateOnlyComponent } from \\"@ember/component/template-only\\";

export interface Signature {
  Element: HTMLElement;
  Args: {};
  Yields: [];
}

<template>what</template> as TemplateOnlyComponent<Signature>
"
`;
